# advanced_programming_2025-2026

./: .gitignore  .marprc.yml  README.md  exam_rules.md  exam_rules_anticheating.md  homework_rules.md  syllabus.md
.github/workflows/: md-to-pages.yml
exams/: README.md
exercises/01/: 01-intro_unix.md
exercises/02/: 02-c++_intro.md  prova.cpp
exercises/02/solutions/: ex2.cpp
exercises/03/: 03-c++_classes.md
exercises/03/examples/: op_overload.cpp  op_overload_proxy.cpp
exercises/04/: 04-c++_inheritance_polymorphism.md
exercises/05/: 05-c++_functions_templates.md
exercises/05/examples/: compare_policy.hpp  main.cpp
exercises/05/solutions/: ex1.cpp
exercises/06/: 06-c++_stl_move.md
exercises/06/solutions/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp
exercises/07/: 07-c++_make_libraries.md
exercises/08/: 08-c++_cmake.md
exercises/08/example_library/: CMakeLists.txt
exercises/09/: 09-c++_optimization_debugging_testing.md
exercises/09/hints/ex3/: CMakeLists.txt
exercises/09/hints/ex3/src/: statistics.cpp
exercises/09/hints/ex3/tests/: mean.cpp
exercises/10/: 10-py_intro.md
exercises/10/solutions/: ex1.py  (+1 more)
exercises/11/: 11-py_classes_modules.md
exercises/12/: 12-py_c++.md
exercises/12/solutions/ex3/: CMakeLists.txt  pyproject.toml  setup.py
exercises/13/: 13-py_scicomp.md
homeworks/: homework_01.md  homework_02.md  homework_03.md
lectures/01/: 01-intro_unix.md
lectures/02/: 02-c++_intro.md
lectures/03/: 03-c++_classes.md
lectures/04/: 04-c++_inheritance_polymorphism.md
lectures/05/: 05-c++_functions_templates.md
lectures/06/: 06-c++_stl.md
lectures/07/: 07-c++_stl2_move.md
lectures/08/: 08-c++_libraries.md
lectures/09/: 09-c++_optimization_debugging_testing.md
lectures/10/: 10-py_intro.md
lectures/11/: 11-py_classes_modules.md
lectures/12/: 12-py_c++.md
lectures/12/examples/06_class-numpy-eigen/: CMakeLists.txt
lectures/13/: 13-py_scicomp.md  example.ipynb
style/: custom.css
(+72 files in other folders)
